<resources>
    <string name="app_name">CatChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CatChat</string>
    <string name="nav_header_subtitle">pangur@catchat.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_mesagez">Mesagez</string>
    <string name="menu_draftz">Draftz</string>
    <string name="menu_sent_mesagez">Sent mesagez</string>
    <string name="menu_trash">In da trash</string>
    <string name="menu_halp">Halp</string>
    <string name="menu_feedback">Giv us feedback</string>
</resources>
