<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mesagez">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.catchat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.catchat.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.catchat.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.catchat.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.catchat.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.catchat.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_mesagez"
        android:name="com.example.catchat.ui.packages.MesagezFragment"
        android:label="@string/menu_mesagez"
        tools:layout="@layout/mesagez_fragment"/>

    <fragment
        android:id="@+id/nav_draftz"
        android:name="com.example.catchat.ui.packages.DraftzFragment"
        android:label="@string/menu_draftz"
        tools:layout="@layout/draftz_fragment"/>

    <fragment
        android:id="@+id/nav_sentmesagez"
        android:name="com.example.catchat.ui.packages.SentMesagezFragment"
        android:label="@string/menu_sent_mesagez"
        tools:layout="@layout/sent_mesagez_fragment" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.example.catchat.ui.packages.TrashFragment"
        android:label="@string/menu_trash"
        tools:layout="@layout/trash_fragment" />

    <fragment
        android:id="@+id/nav_halp"
        android:name="com.example.catchat.ui.packages.HalpFragment"
        tools:layout="@layout/halp_fragment"
        android:label="@string/menu_halp"/>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.catchat.ui.packages.FeebackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/feeback_fragment"/>


</navigation>